Fix BG color of buttons on firefox

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ body {
 }
 
 .button {
+  background-color: white;
   border-radius: 8px;
   display: inline-block;
   font-family: 'PT Sans', sans-serif;
